--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,15 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 langchain = "^0.2.7"
+langchain-community = "^0.2.7"
+python-dotenv = "^1.0.1"
+langserve = "^0.2.2"
+fastapi = "^0.111.1"
+sse-starlette = "^2.1.2"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
