--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.1"
 langserve = "^0.2.2"
 fastapi = "^0.111.1"
 sse-starlette = "^2.1.2"
+transformers = "^4.42.4"
 
 
 [tool.poetry.group.dev.dependencies]
