--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ langserve = "^0.2.2"
 fastapi = "^0.111.1"
 sse-starlette = "^2.1.2"
 transformers = "^4.42.4"
+langchain-chroma = "^0.1.2"
+tavily-python = "^0.3.4"
 
 
 [tool.poetry.group.dev.dependencies]
