--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ sse-starlette = "^2.1.2"
 transformers = "^4.42.4"
 langchain-chroma = "^0.1.2"
 tavily-python = "^0.3.4"
+langchain-anthropic = "^0.1.20"
+langgraph = "^0.1.8"
+bs4 = "^0.0.2"
+langchainhub = "^0.1.20"
 
 
 [tool.poetry.group.dev.dependencies]
